added new constrant and new methods

--- a/email/src/main/resources/templates/email/user-approval-email-page.html
+++ b/email/src/main/resources/templates/email/user-approval-email-page.html
@@ -190,7 +190,7 @@
                                             <td align="center" bgcolor="#13aa57" style="border-radius: 6px;">
                                                 <a th:href="${verifyAddress}" target="_blank"
                                                    style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">
-                                                    Verify Email</a>
+                                                    Approve Registration</a>
                                             </td>
                                         </tr>
                                     </table>
