status capture commit

--- a/core/src/main/resources/templates/core/management_password_template.html
+++ b/core/src/main/resources/templates/core/management_password_template.html
@@ -25,7 +25,7 @@
 <div id="header" th:insert="core/header"></div>
 <div class="main-content">
     <div class="container">
-        <form action="${management/users/saveApproving}" method="post">
+        <form th:action="@{saveApproving}" method="post">
             <div>
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" name="password" required>
