--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -122,12 +122,16 @@
                             </div>
                             <div class="form-group">
                                 <label>Role</label>
-                                <input type="text" class="form-control" name="role">
+                                <select class="form-control" name="role">
+                                    <option selected="selected">ROLE_USER</option>
+                                    <option>ROLE_ADMIN</option>
+                                    <option>ROLE_MODERATOR</option>
+                                </select>
                                 <span th:id="errorModalSaverole" class="errorSpan"></span>
                             </div>
                             <div class="form-group">
                                 <label>Status</label>
-                                <input type="text" class="form-control" name="userStatus" required>
+                                <input type="text" class="form-control" name="userStatus" value="CREATED" readonly required>
                                 <span th:id="errorModalSaveuserStatus" class="errorSpan"></span>
                             </div>
                         </div>
