one more refactor

--- a/core/src/main/resources/templates/email/user-approval-email-page.html
+++ b/core/src/main/resources/templates/email/user-approval-email-page.html
@@ -174,7 +174,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <div style="margin: 0;" th:text="${'Hi ' + name + ', Your account was registered by Green City admin! To submit your registration, press button below.'}"></div>
+                        <div style="margin: 0;" th:text="${'Hi ' + name + ', Your account was registered by Green City admin! To set password and finish your registration, press button below.'}"></div>
                     </td>
                 </tr>
                 <!-- end copy -->
@@ -208,7 +208,7 @@
                         <p style="margin: 0;">If that doesn't work, copy and paste the following link in your
                             browser:</p>
                         <p style="margin: 0;" th:text="${approveRegistration}"><a th:href="${approveRegistration}"
-                                                                            target="_blank"></a>
+                                                                                  target="_blank"></a>
                         </p>
                     </td>
                 </tr>
