--- a/email/src/main/resources/templates/email/user-approval-email-page.html
+++ b/email/src/main/resources/templates/email/user-approval-email-page.html
@@ -237,7 +237,7 @@
                 <tr>
                     <td align="center" bgcolor="#e9ecef"
                         style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                        <p style="margin: 0;">Have fun.</p>
+                        <p style="margin: 0;">You are welcome</p>
                     </td>
                 </tr>
                 <!-- end permission -->
