deleted unnecessary figures from email template

--- a/email/src/main/resources/templates/email/verify-email-page.html
+++ b/email/src/main/resources/templates/email/verify-email-page.html
@@ -120,7 +120,7 @@
                     <td align="center" valign="top" bgcolor="#13aa57" style="margin-top: 20px">
                         <a th:href="${clientLink}"
                            style="display: inline-block; padding: 20px 50px; font-weight:700; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 32px; color: #ffffff; text-decoration: none; border-radius: 6px;">
-                            Green City2
+                            Green City
                         </a>
                     </td>
                 </tr>
@@ -147,7 +147,7 @@
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
                         <h2 style="margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
-                            Verify2 your email address to complete registration</h2>
+                            Verify your email address to complete registration</h2>
                     </td>
                 </tr>
             </table>
