--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -32,7 +32,7 @@
                     <div class="table-title">
                         <div class="row">
                             <div class="col-sm-6">
-                                <h2>Manage <strong>User</strong></h2>
+                                <h2>Manage <strong>User   </strong><a class="statistic-style" th:href="@{displayGraph}"><i class="fas fa-chart-bar"></i></a></h2>
                             </div>
                             <div class="col-sm-6">
                                 <span class="search-box-right">
