--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -28,7 +28,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/management/users">
+                                <a th:href="@{/management/users}">
                                     Users
                                 </a>
                             </li>
