--- a/core/src/main/resources/templates/core/management_general_statistics_for_users.html
+++ b/core/src/main/resources/templates/core/management_general_statistics_for_users.html
@@ -36,7 +36,7 @@
 
         <div id="usersCity" style="width: 550px; height: 400px; margin: 0 auto"></div>
         <hr>
-        <div id="test" style="width: 550px; height: 400px; margin: 0 auto"></div>
+        <div id="usersRegistration" style="width: 550px; height: 400px; margin: 0 auto"></div>
     </div>
     <script th:inline="javascript" >
         $(function(){
@@ -84,7 +84,7 @@
         Highcharts.setOptions({
             colors: ['#64E572']
         });
-        Highcharts.chart('test', {
+        Highcharts.chart('usersRegistration', {
             chart: {
                 type: 'line'
             },
@@ -98,7 +98,7 @@
                 text: [[${#dates.year(#dates.createNow())}]]
             },
             xAxis: {
-                categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                categories: [[${months}]]
             },
             yAxis: {
                 title: {
