Displaying a list of all places #1415

--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -37,6 +37,11 @@
                                     Habits
                                 </a>
                             </li>
+                            <li>
+                                <a href="/management/places/">
+                                    Places
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
