RatingStatistics UI for management page added, exporter to Excel file implemented

--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -38,6 +38,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="/management/rating/">
+                                    Rating
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/management/places/">
                                     Places
                                 </a>
