--- a/core/src/main/resources/templates/core/management_user_rating.html
+++ b/core/src/main/resources/templates/core/management_user_rating.html
@@ -21,8 +21,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.0/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.0/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
 </head>
@@ -44,12 +42,11 @@
                         </div>
                     </div>
                 </div>
-                <table id="datatable" class="table table-striped table-hover" data-filter-control="true"
-                       data-show-search-clear-button="true">
+                <table id="datatable" class="table table-striped table-hover">
                     <thead>
                     <tr class="table-primary">
                         <th>ID</th>
-                        <th data-filter-control="select">Event name</th>
+                        <th>Event name</th>
                         <th>User ID</th>
                         <th>User email</th>
                         <th>Date</th>
