--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -24,6 +24,12 @@
                         <li>
                             <a href="/management/habits/" class="router-links">Habits</a>
                         </li>
+                        <li>
+                            <a href="/management/places/" class="router-links">Places</a>
+                        </li>
+                        <li>
+                            <a href="/management/socialnetworkimages/" class="router-links">Social network images</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="bottom-part">
