--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -42,6 +42,11 @@
                                     Places
                                 </a>
                             </li>
+                            <li>
+                                <a href="/management/socialnetworkimages/">
+                                    Social network images
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
