RatingStatistics UI for management page added, exporter to Excel file implemented (#1478)
* RatingStatistics UI for management page added, exporter to Excel file implemented

* unused filtering removed

* made required changes

* log exception message

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -19,10 +19,15 @@
                             <a class="router-links" href="#">Fact of the day</a>
                         </li>
                         <li>
-                            <a class="router-links" href="#">Users</a>
+                            <a class="router-links" href="/management/users">Users</a>
                         </li>
                         <li>
                             <a href="/management/habits/" class="router-links">Habits</a>
+                        </li>
+                        <li>
+                            <a href="/management/rating/" class="router-links">
+                                Rating
+                            </a>
                         </li>
                         <li>
                             <a href="/management/places/" class="router-links">Places</a>
