Displaying Eco news

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -10,7 +10,7 @@
                 <div class="left-side">
                     <ul class="list-of-site-links">
                         <li>
-                            <a class="router-links" href="#">Eco news</a>
+                            <a class="router-links" href="/management/eco-news">Eco news</a>
                         </li>
                         <li>
                             <a href="/management/tipsandtricks" class="router-links">Tips & Tricks</a>
@@ -33,7 +33,7 @@
                             <a href="/management/places/" class="router-links">Places</a>
                         </li>
                         <li>
-                            <a href="/management/socialnetworkimages/" class="router-links">Social network images</a>
+                            <a href="/management/socialnetworkimages" class="router-links">Social network images</a>
                         </li>
                     </ul>
                 </div>
