--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -13,7 +13,7 @@
                     <div class="navigation-menu-left">
                         <ul>
                             <li>
-                                <a href="#">
+                                <a href="/management/eco-news">
                                     Eco news
                                 </a>
                             </li>
